# tree_detection

./: .gitignore  README.md
ground_plane_removal/: CMakeLists.txt  package.xml
ground_plane_removal/include/ground_plane_removal/: ElevationMapGroundPlaneRemover.hpp  GroundPlaneRemover.hpp  Parameters.hpp  typedefs.hpp
ground_plane_removal/src/: ElevationMapGroundPlaneRemover.cpp  GroundPlaneRemover.cpp  Parameters.cpp
point_cloud_preprocessing/: CMakeLists.txt  package.xml
point_cloud_preprocessing/include/point_cloud_preprocessing/: Parameters.hpp  PointCloudPreprocessor.hpp  typedefs.hpp
point_cloud_preprocessing/src/: Parameters.cpp  PointCloudPreprocessor.cpp
tree_detection/: CMakeLists.txt  package.xml
tree_detection/include/tree_detection/: Parameters.hpp  TreeDetector.hpp  common.hpp  typedefs.hpp
tree_detection/param/: default_parameters.yaml  default_services.yaml  default_topics.yaml
tree_detection/src/: Parameters.cpp  TreeDetector.cpp
tree_detection_ros/: CMakeLists.txt  package.xml
tree_detection_ros/config/: pcd_process.yaml  tree_detection.yaml
tree_detection_ros/include/tree_detection_ros/: TreeDetectorRos.hpp  creators.hpp  helpers.hpp
tree_detection_ros/launch/: tree_detection.launch
tree_detection_ros/rviz/: default.rviz
tree_detection_ros/src/: TreeDetectorRos.cpp  creators.cpp  helpers.cpp  process_pcd_node.cpp  tree_detection_node.cpp
tree_detection_ros/srv/: SetCroppingLocation.srv
