<?xml version="1.0"?>

<package format="2">

	<name>tree_detection_ros</name>
	<version>0.5.0</version>
	<description>Tree detector from point cloud maps</description>

	<license>BSD</license>

	<author email="jelavice@ethz.ch">EJ</author>
	<maintainer email="jelavice@ethz.ch">EJr</maintainer>


	<buildtool_depend>catkin</buildtool_depend>
	<depend>tree_detection</depend>
	<depend>ground_plane_removal</depend>
	<depend> pcl_conversions</depend>
	<depend>pcl_ros</depend>
	<depend>sensor_msgs</depend>
	<depend>std_msgs</depend>
	<depend>visualization_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>roscpp</depend>
	<depend>tf2</depend>
	<depend>tf2_ros</depend>
	<depend>tf2_geometry_msgs</depend>
	<depend>roslib</depend>
	<depend>jsk_recognition_msgs</depend>
	<depend>message_generation</depend>
	<exec_depend>message_runtime</exec_depend>
	


</package>
